--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   </head>
 
   <body>
-    <header>CONNECT Four</header>
+    <header>CONNECT FOUR</header>
     <!-- The below is a place holder, change later -->
-    <h1>PURPLE's Turn</h1>
+    <h1></h1>
     <section id="markers">
       <div></div>
       <div></div>
